# focus-lab

./: CMakeLists.txt  README.md  main.cpp  settings.json
core/: GameSession.cpp  GameSession.h  GameState.cpp  GameState.h  Input.cpp  Input.h
core/games/: IGame.h  MemoryGame.h  ReactionGame.h
core/metrics/: Metrics.h
core/platform/: FileSystem.h  PlatformPaths.h  PlatformPaths_mac.mm
core/settings/: GameSettings.h  SettingsPersistence.cpp  SettingsPersistence.h
cpp-app/: main.cpp
data/: settings.json
docs/: archictecture.md  gameplay.md  roadmap.md  tests.md
tests/: GameSessionTests.cpp  MemoryGameTests.cpp  MetricsTests.cpp  ReactionGameTests.cpp
